# src/server.js
@@ -68,6 +68,7 @@ const productOrderRoutes = require('./routes/productOrderRoutes');
 const invoiceRoutes = require('./routes/invoiceRoutes');
 const workerTransactionRoutes = require('./routes/workerTransactionRoutes');
 const locationRoutes = require('./routes/locationRoutes');
+const jobPostRoutes = require('./routes/jobPostRoutes');
 
 // API Routing setup
 app.use('/api/services', serviceRoutes);
@@ -97,6 +98,7 @@ app.use('/api/product-orders', productOrderRoutes);
 app.use('/api/invoices', invoiceRoutes);
 app.use('/api/worker-transactions', workerTransactionRoutes);
 app.use('/api/location', locationRoutes);
+app.use('/api/jobposts', jobPostRoutes);
 
 
 
